[project]
name = "cmdz"
description = "program your own command"
version = "1"
authors = [
    { name = "B.H.J. Thate", email = "thatebhj@gmail.com" }
]

license = {text = "Public Domain"}
readme = "README.rst"
requires-python = ">=3.9"
keywords = ["python3", "shell", "commands"]
classifiers=[
        "Development Status :: 3 - Alpha",
        "License :: Public Domain",
        "Operating System :: POSIX :: Linux",
        "Programming Language :: Python :: 3 :: Only",
        "Topic :: Software Development :: Libraries :: Python Modules",
]


[project.urls] 
home = "http://pypi.org/project/cmdz"
repository = "http://github.com/thatebhj/cmdz"


[build-system]
requires = [
    "setuptools >= 35.0.2",
    "setuptools_scm >= 2.0.0, <3"
]
build-backend = "setuptools.build_meta"